--- a/app/components/exporter.module.scss
+++ b/app/components/exporter.module.scss
@@ -108,7 +108,7 @@
     background-color: var(--gray);
 
     .chat-info {
-      background-color: var(--second);
+      background: #ccc;
       padding: 20px;
       border-radius: 10px;
       margin-bottom: 20px;
@@ -205,7 +205,7 @@
         }
 
         .body {
-          background-color: var(--second);
+          background: linear-gradient(to bottom, #833ab4, #000);
           margin-right: 10px;
         }
       }
