--- a/app/components/home.module.scss
+++ b/app/components/home.module.scss
@@ -42,7 +42,7 @@
   width: var(--sidebar-width);
   box-sizing: border-box;
   padding: 20px;
-  background-color: var(--second);
+  background: linear-gradient(to bottom, #833ab4, #000);
   display: flex;
   flex-direction: column;
   box-shadow: inset -2px 0px 2px 0px rgb(0, 0, 0, 0.05);
@@ -434,7 +434,7 @@
 }
 
 .chat-message-user > .chat-message-container > .chat-message-item {
-  background-color: var(--second);
+  background:var(--second);
 }
 
 .chat-message-actions {
